# gralkor

./: .clawhubignore  .env.example  .gitignore  .npmignore  AGENT_END_GUIDE.md  CLAUDE.md  INDEX_LEGACY_MEMORIES_GUIDE.md  MENTAL_MODEL.md  MIGRATION_PLAN.md  Makefile  PLUGIN_START_GUIDE.md  PROJECT.md  README.md  SUGGESTIONS.md  TEST_TREES.md  config.yaml  docker-compose.dev.yml  docker-compose.yml  git-plan.md  openclaw.plugin.json  openclaw.tool-plugin.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  stryker.config.mjs  tsconfig.json  vitest.config.ts  vitest.stryker.config.ts
.claude/: settings.json
.humans/: README.md
ex/: .env.example  .gitignore  Dockerfile  README.md  gralkor_ex-2.0.3.tar  gralkor_ex-2.1.0.tar  mix.exs  (+1 more)
scripts/: pack.sh  (+9 more)
server/: main.py  pyproject.toml  requirements.txt
server/pipelines/: capture_buffer.py  distill.py  interpret.py  messages.py
server/tests/: conftest.py  test_auth.py  test_capture_buffer.py  test_capture_endpoint.py  test_capture_flush_integration.py  test_distill.py  test_distill_endpoint.py  test_distillation.py  test_distillation_live.py  test_downstream_error_handling.py  test_episodes.py  test_formatting.py  test_graph_ops.py  test_graphiti_for.py  test_health.py  test_idempotency.py  test_ingest.py  test_integration.py  test_interpret.py  test_lifespan.py  test_message_clean.py  test_ontology.py  test_recall.py  test_sdk_retry_config.py  test_search.py  test_session_end_endpoint.py  test_tools.py  test_upstream_idle_survival.py
server/tests/fixtures/: distillation_cases.json
(+216 files in other folders)
