[project]
name = "gralkor-server"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "graphiti-core[falkordb]>=0.28",
    "falkordblite",
    "redis<7",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
